--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;0,500;0,600;1,400&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;0,500;0,600;0,800;1,400&display=swap"
       rel="stylesheet"
     />
     <link
@@ -22,9 +22,9 @@
       <div class="container">
         <nav class="nav">
           <ul>
-            <li><a href="#">Портфолио</a></li>
-            <li><a href="#">Что умею</a></li>
-            <li><a href="#">Обратная связь</a></li>
+            <li><a href="#portfolio">Портфолио</a></li>
+            <li><a href="#instruments">Что умею</a></li>
+            <li><a href="#callback">Обратная связь</a></li>
           </ul>
         </nav>
         <div class="header__content">
@@ -34,23 +34,23 @@
           <div class="title">
             <div class="name">
               <h1>
-                Доброго времени суток, меня зовут <span>Дмитриев Виктор</span>
+                Доброго времени суток, <br> меня зовут <span>Виктор Дмитриев</span>
               </h1>
               <p>Front-end Developer</p>
             </div>
             <div class="contacts">
-              <a href="#"
+              <a href="mailto:vik.more0502@gmail.com"
                 ><span><img src="./img/mail.svg" alt="mail" /></span
                 >vik.more0502@gmail.com</a
               >
-              <a href="#"
+              <a href="https://t.me/vik0502" target="_blank"
                 ><span><img src="./img/tg.svg" alt="tg" /></span>Telegram</a
               >
-              <a href="#"
-                ><span><img src="./img/phone.svg" alt="phone" /></span>+38 099
-                477 85 04</a
+              <a href="tel:+380960957134"
+                ><span><img src="./img/phone.svg" alt="phone" /></span>+38 096
+                095 71 34</a
               >
-              <a href="#"
+              <a href="https://github.com/viktor0502" target="_blank"
                 ><span><img src="./img/git.svg" alt="git" /></span>Github</a
               >
             </div>
@@ -67,61 +67,49 @@
     </header>
     <section class="portfolio">
       <div class="container">
-        <h2>Портфолио</h2>
+        <h2 id="portfolio">Портфолио</h2>
         <div class="swiper">
           <div class="swiper-wrapper">
             <div class="swiper-slide">
               <div class="item">
-                <a href="#">
-                  <div class="img">
+                <a href="https://viktor0502.github.io/landing-nft-site/" target="_blank">
+                  <div class="img test">
                     <img src="./img/zero.png" alt="zero" />
                   </div>
                 </a>
                 <div class="name">
-                  <h3>Landing</h3>
+                  <h3>Landing NFT</h3>
                   <p>HTML, CSS, JS, Swiper slider</p>
                 </div>
               </div>
             </div>
             <div class="swiper-slide">
                 <div class="item">
-                  <a href="#">
-                    <div class="img">
-                      <img src="./img/zero.png" alt="zero" />
+                  <a href="https://vetverica.com.ua/" target="_blank">
+                    <div class="img done">
+                      <img src="./img/vetverica.png" alt="vetverica" />
                     </div>
                   </a>
                   <div class="name">
-                    <h3>Landing</h3>
-                    <p>HTML, CSS, JS, Swiper slider</p>
+                    <h3>Landing VetVerica</h3>
+                    <p>HTML, CSS, JS, Bootstrap</p>
                   </div>
                 </div>
               </div>
               <div class="swiper-slide">
                 <div class="item">
-                  <a href="#">
-                    <div class="img">
-                      <img src="./img/zero.png" alt="zero" />
+                  <a href="https://viktor0502.github.io/investa/" target="_blank">
+                    <div class="img test">
+                      <img src="./img/invista.png" alt="invista" />
                     </div>
                   </a>
                   <div class="name">
-                    <h3>Landing</h3>
+                    <h3>Landing Invista</h3>
                     <p>HTML, CSS, JS, Swiper slider</p>
                   </div>
                 </div>
               </div>
-              <div class="swiper-slide">
-                <div class="item">
-                  <a href="#">
-                    <div class="img">
-                      <img src="./img/zero.png" alt="zero" />
-                    </div>
-                  </a>
-                  <div class="name">
-                    <h3>Landing</h3>
-                    <p>HTML, CSS, JS, Swiper slider</p>
-                  </div>
-                </div>
-              </div>
+              
           </div>
           <div class="swiper-scrollbar"></div>
         </div>
@@ -129,52 +117,52 @@
     </section>
     <section class="instruments">
         <div class="container">
-            <h2>Инструменты работы</h2>
+            <h2 id="instruments">Инструменты работы</h2>
             <div class="wrapper">
                 <div class="item">
-                    <span><img src="./img/html.svg" alt="html"></span>
+                    <span class="icon"><img src="./img/html.svg" alt="html"></span>
                     <span class="name">HTML</span>
                     <span class="scale html"></span>
                     <span class="percent">95%</span>
                 </div>
                 <div class="item">
-                    <span><img src="./img/bt.svg" alt="html"></span>
+                    <span class="icon"><img src="./img/bt.svg" alt="html"></span>
                     <span class="name">Bootstrap</span>
                     <span class="scale bt"></span>
                     <span class="percent">70%</span>
                 </div>
                 <div class="item">
-                    <span><img src="./img/css.svg" alt="html"></span>
+                    <span class="icon"><img src="./img/css.svg" alt="html"></span>
                     <span class="name">CSS</span>
                     <span class="scale css"></span>
-                    <span class="percent">90%</span>
+                    <span class="percent">80%</span>
                 </div>
                 <div class="item">
-                    <span><img src="./img/react.svg" alt="html"></span>
+                    <span class="icon"><img src="./img/react.svg" alt="html"></span>
                     <span class="name">React JS</span>
                     <span class="scale react"></span>
                     <span class="percent">50%</span>
                 </div>
                 <div class="item">
-                    <span><img src="./img/sass.svg" alt="html"></span>
+                    <span class="icon"><img src="./img/sass.svg" alt="html"></span>
                     <span class="name">SASS/SCSS</span>
                     <span class="scale scss"></span>
-                    <span class="percent">95%</span>
+                    <span class="percent">70%</span>
                 </div>
                 <div class="item">
-                    <span><img src="./img/git.svg" alt="html"></span>
+                    <span class="icon"><img src="./img/git.svg" alt="html"></span>
                     <span class="name">GitHub</span>
                     <span class="scale git"></span>
                     <span class="percent">70%</span>
                 </div>
                 <div class="item">
-                    <span><img src="./img/js.svg" alt="html"></span>
+                    <span class="icon"><img src="./img/js.svg" alt="html"></span>
                     <span class="name">JS</span>
                     <span class="scale js"></span>
                     <span class="percent">50%</span>
                 </div>
                 <div class="item">
-                    <span><img src="./img/bem.svg" alt="html"></span>
+                    <span class="icon"><img src="./img/bem.svg" alt="html"></span>
                     <span class="name">Методология БЭМ</span>
                     <span class="scale bem"></span>
                     <span class="percent">80%</span>
@@ -182,9 +170,8 @@
             </div>
             <div class="instruments__quote quote">
                 <p>
-                  Здесь можете ознакомиться с примерами работ, которые помогут Вам
-                  составить первое впечатление. Однако, буду рад лично ответить на
-                  появившиеся вопросы и обсудить работы.
+                  
+На данный момент продолжаю развиваться и получать новые навыки, параллельно изучаю английский язык в предметной области.А высокая способность и интерес в сфере позволет добиться немалого профессионализма в этом направлении.
                 </p>
               </div>
         </div>
@@ -221,7 +208,7 @@
     </section>
     <section class="callback">
         <div class="container">
-            <h2>Уточнить  детали или связаться со мной для сотрудничества</h2>
+            <h2 id="callback">Уточнить  детали или связаться со мной для сотрудничества</h2>
             <form>
                 <input type="name" placeholder="Имя">
                 <input type="phone" placeholder="Телефон">
@@ -231,6 +218,7 @@
             </form>
         </div>
     </section>
+    <section class=""></section>
 
 
 
