--- a/index.html
+++ b/index.html
@@ -34,7 +34,8 @@
           <div class="title">
             <div class="name">
               <h1>
-                Доброго времени суток, <br> меня зовут <span>Виктор Дмитриев</span>
+                Доброго времени суток, <br />
+                меня зовут <span>Виктор Дмитриев</span>
               </h1>
               <p>Front-end Developer</p>
             </div>
@@ -72,7 +73,10 @@
           <div class="swiper-wrapper">
             <div class="swiper-slide">
               <div class="item">
-                <a href="https://viktor0502.github.io/landing-nft-site/" target="_blank">
+                <a
+                  href="https://viktor0502.github.io/landing-nft-site/"
+                  target="_blank"
+                >
                   <div class="img test">
                     <img src="./img/zero.png" alt="zero" />
                   </div>
@@ -84,160 +88,164 @@
               </div>
             </div>
             <div class="swiper-slide">
-                <div class="item">
-                  <a href="https://vetverica.com.ua/" target="_blank">
-                    <div class="img done">
-                      <img src="./img/vetverica.png" alt="vetverica" />
-                    </div>
-                  </a>
-                  <div class="name">
-                    <h3>Landing VetVerica</h3>
-                    <p>HTML, CSS, JS, Bootstrap</p>
+              <div class="item">
+                <a href="https://vetverica.com.ua/" target="_blank">
+                  <div class="img done">
+                    <img src="./img/vetverica.png" alt="vetverica" />
                   </div>
+                </a>
+                <div class="name">
+                  <h3>Landing VetVerica</h3>
+                  <p>HTML, CSS, JS, Bootstrap</p>
                 </div>
               </div>
-              <div class="swiper-slide">
-                <div class="item">
-                  <a href="https://viktor0502.github.io/investa/" target="_blank">
-                    <div class="img test">
-                      <img src="./img/invista.png" alt="invista" />
-                    </div>
-                  </a>
-                  <div class="name">
-                    <h3>Landing Invista</h3>
-                    <p>HTML, CSS, JS, Swiper slider</p>
+            </div>
+            <div class="swiper-slide">
+              <div class="item">
+                <a href="https://viktor0502.github.io/investa/" target="_blank">
+                  <div class="img test">
+                    <img src="./img/invista.png" alt="invista" />
                   </div>
+                </a>
+                <div class="name">
+                  <h3>Landing Invista</h3>
+                  <p>HTML, CSS, JS, Swiper slider</p>
                 </div>
               </div>
-              
+            </div>
           </div>
           <div class="swiper-scrollbar"></div>
         </div>
       </div>
     </section>
     <section class="instruments">
-        <div class="container">
-            <h2 id="instruments">Инструменты работы</h2>
-            <div class="wrapper">
-                <div class="item">
-                    <span class="icon"><img src="./img/html.svg" alt="html"></span>
-                    <span class="name">HTML</span>
-                    <span class="scale html"></span>
-                    <span class="percent">95%</span>
-                </div>
-                <div class="item">
-                    <span class="icon"><img src="./img/bt.svg" alt="html"></span>
-                    <span class="name">Bootstrap</span>
-                    <span class="scale bt"></span>
-                    <span class="percent">70%</span>
-                </div>
-                <div class="item">
-                    <span class="icon"><img src="./img/css.svg" alt="html"></span>
-                    <span class="name">CSS</span>
-                    <span class="scale css"></span>
-                    <span class="percent">80%</span>
-                </div>
-                <div class="item">
-                    <span class="icon"><img src="./img/react.svg" alt="html"></span>
-                    <span class="name">React JS</span>
-                    <span class="scale react"></span>
-                    <span class="percent">50%</span>
-                </div>
-                <div class="item">
-                    <span class="icon"><img src="./img/sass.svg" alt="html"></span>
-                    <span class="name">SASS/SCSS</span>
-                    <span class="scale scss"></span>
-                    <span class="percent">70%</span>
-                </div>
-                <div class="item">
-                    <span class="icon"><img src="./img/git.svg" alt="html"></span>
-                    <span class="name">GitHub</span>
-                    <span class="scale git"></span>
-                    <span class="percent">70%</span>
-                </div>
-                <div class="item">
-                    <span class="icon"><img src="./img/js.svg" alt="html"></span>
-                    <span class="name">JS</span>
-                    <span class="scale js"></span>
-                    <span class="percent">50%</span>
-                </div>
-                <div class="item">
-                    <span class="icon"><img src="./img/bem.svg" alt="html"></span>
-                    <span class="name">Методология БЭМ</span>
-                    <span class="scale bem"></span>
-                    <span class="percent">80%</span>
-                </div>
-            </div>
-            <div class="instruments__quote quote">
-                <p>
-                  
-На данный момент продолжаю развиваться и получать новые навыки, параллельно изучаю английский язык в предметной области.А высокая способность и интерес в сфере позволет добиться немалого профессионализма в этом направлении.
-                </p>
-              </div>
+      <div class="container">
+        <h2 id="instruments">Инструменты работы</h2>
+        <div class="wrapper">
+          <div class="item">
+            <span class="icon"><img src="./img/html.svg" alt="html" /></span>
+            <span class="name">HTML</span>
+            <span class="scale html"></span>
+            <span class="percent">95%</span>
+          </div>
+          <div class="item">
+            <span class="icon"><img src="./img/bt.svg" alt="html" /></span>
+            <span class="name">Bootstrap</span>
+            <span class="scale bt"></span>
+            <span class="percent">70%</span>
+          </div>
+          <div class="item">
+            <span class="icon"><img src="./img/css.svg" alt="html" /></span>
+            <span class="name">CSS</span>
+            <span class="scale css"></span>
+            <span class="percent">80%</span>
+          </div>
+          <div class="item">
+            <span class="icon"><img src="./img/react.svg" alt="html" /></span>
+            <span class="name">React JS</span>
+            <span class="scale react"></span>
+            <span class="percent">50%</span>
+          </div>
+          <div class="item">
+            <span class="icon"><img src="./img/sass.svg" alt="html" /></span>
+            <span class="name">SASS/SCSS</span>
+            <span class="scale scss"></span>
+            <span class="percent">70%</span>
+          </div>
+          <div class="item">
+            <span class="icon"><img src="./img/git.svg" alt="html" /></span>
+            <span class="name">GitHub</span>
+            <span class="scale git"></span>
+            <span class="percent">70%</span>
+          </div>
+          <div class="item">
+            <span class="icon"><img src="./img/figma.svg" alt="html" /></span>
+            <span class="name">Figma</span>
+            <span class="scale fm"></span>
+            <span class="percent">85%</span>
+          </div>
+          <div class="item">
+            <span class="icon"><img src="./img/photoshop.svg" alt="html" /></span>
+            <span class="name">Photoshop</span>
+            <span class="scale ph"></span>
+            <span class="percent">70%</span>
+          </div>
+          <div class="item">
+            <span class="icon"><img src="./img/js.svg" alt="html" /></span>
+            <span class="name">JS</span>
+            <span class="scale js"></span>
+            <span class="percent">50%</span>
+          </div>
+          <div class="item">
+            <span class="icon"><img src="./img/bem.svg" alt="html" /></span>
+            <span class="name">Методология БЭМ</span>
+            <span class="scale bem"></span>
+            <span class="percent">80%</span>
+          </div>
         </div>
+        <div class="instruments__quote quote">
+          <p>
+            На данный момент продолжаю развиваться и получать новые навыки,
+            параллельно изучаю английский язык в предметной области.А высокая
+            способность и интерес в сфере позволет добиться немалого
+            профессионализма в этом направлении.
+          </p>
+        </div>
+      </div>
     </section>
     <section class="benefits">
-        <div class="container">
-            <div class="wrapper">
-                <div class="item">
-                    <div class="img">
-                        <img src="./img/adapt.png" alt="adapt">
-                    </div>
-                    <h3>Адаптивная верстка</h3>
-                </div>
-                <div class="item">
-                    <div class="img">
-                        <img src="./img/optimize.png" alt="optimize">
-                    </div>
-                    <h3>Оптимизирование готового кода</h3>
-                </div>
-                <div class="item">
-                    <div class="img">
-                        <img src="./img/cod.png" alt="cod">
-                    </div>
-                    <h3>Понятный, чистый код</h3>
-                </div>
-                <div class="item">
-                    <div class="img">
-                        <img src="./img/crossbrowser.png" alt="crossbrowser">
-                    </div>
-                    <h3>Кроссбраузерная верстка</h3>
-                </div>
+      <div class="container">
+        <div class="wrapper">
+          <div class="item">
+            <div class="img">
+              <img src="./img/adapt.png" alt="adapt" />
             </div>
+            <h3>Адаптивная верстка</h3>
+          </div>
+          <div class="item">
+            <div class="img">
+              <img src="./img/optimize.png" alt="optimize" />
+            </div>
+            <h3>Оптимизирование готового кода</h3>
+          </div>
+          <div class="item">
+            <div class="img">
+              <img src="./img/cod.png" alt="cod" />
+            </div>
+            <h3>Понятный, чистый код</h3>
+          </div>
+          <div class="item">
+            <div class="img">
+              <img src="./img/crossbrowser.png" alt="crossbrowser" />
+            </div>
+            <h3>Кроссбраузерная верстка</h3>
+          </div>
         </div>
+      </div>
     </section>
     <section class="callback">
-        <div class="container">
-            <h2 id="callback">Уточнить  детали или связаться со мной для сотрудничества</h2>
-            <form>
-                <input type="name" placeholder="Имя">
-                <input type="phone" placeholder="Телефон">
-                <p>Сообщение</p>
-                <textarea></textarea>
-                <button type="submit">Жду ответ</button>
-            </form>
-        </div>
+      <div class="container">
+        <h2 id="callback">
+          Уточнить детали или связаться со мной для сотрудничества
+        </h2>
+        <form method="post" id="form">
+          <input type="name" placeholder="Имя" />
+          <input type="phone" placeholder="Телефон" />
+          <p>Сообщение</p>
+          <textarea></textarea>
+          <button type="submit">Жду ответ</button>
+          <div id="success" class="alert alert-success" role="alert">
+            Сообщение отправлено!
+          </div>
+        </form>
+      </div>
     </section>
     <section class=""></section>
 
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
     <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
     <script src="./script.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
   </body>
 </html>
